<resources>
    <string name="app_name">FirebaseLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user">New User?<b> Register</b></string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_your_password">Re-Enter your Password</string>
    <string name="send">Send</string>
    <string name="chennelId">ChannelId</string>
    <string name= "channelName">ChannelName</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_firebase">Welcome to the Firebase</string>
    <string name="tokenString">tokenString</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="subscribe">Subscribe</string>
    <string name="default_notification_channel_id">channel1</string>
    <string name="unsubscribe">UnSubscribe</string>
</resources>