<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPassword">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/chocolate_cake"
        android:letterSpacing="0.2"
        android:text="@string/forget_password"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_iv" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameforgot_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/enter_your_email"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/Login_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/firebase_gradient"
        android:fontFamily="@font/arciform"
        android:letterSpacing="0.5"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/usernameforgot_ed" />


</androidx.constraintlayout.widget.ConstraintLayout>