<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_iv"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/splash"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/register_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/chocolate_cake"
                android:letterSpacing="0.2"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/login_iv" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstname_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/first_name"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/register_tv" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastname_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/last_name"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/firstname_ed" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/age_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_your_age"
                android:padding="16dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/lastname_ed" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_your_email"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/age_ed" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/username_ed" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_reenter_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/re_enter_your_password"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/password_ed" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/firebase_gradient"
                android:fontFamily="@font/arciform"
                android:letterSpacing="0.5"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_reenter_ed" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>